--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>საფეხბურთო სამყარო</title>
+    <title>სამეფო კლუბი</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+
+<style>
+
+body{
+    background-image:url("img/background.jpg");
+    background-repeat:no-repeat;
+    background-size: 100% ;
+    
+    }
+</style>
+
+
 </head>
 <body>
-<h1>ჩემპიონთა ლიგა</h1>
-    
-
+<a href="./history.html">ისტორია</a>
 
 
 
