--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,10 @@ body{
 </head>
 <body>
 <a href="./history.html">ისტორია</a>
+<a href="./Titles.html">ტიტულები</a>
+<a href="./championsleague.html">ჩემიონთა ლიგა</a>
+<a href="./laliga.html">ლა ლიგა</a>
+<a href="./copadelrey.html">სამეფო თასი</a>
 
 
 
