--- a/history.html
+++ b/history.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="./styles/history.css">
 </head>
 <body>
-<h1>ი ს ტ ო რ ი ა</h1> <img src="./img/სანტიაგო ბერნაბეუ.jfif" alt="...">
+<h1>ი ს ტ ო რ ი ა</h1> 
+     <img src="./img/სანტიაგო ბერნაბეუ.jfif" alt="...">
 
 <ul>
    <li>პირველი ეტაპი 1900-1910</li>
